Deleted "and programmer"

--- a/Hannah_Knight_Website.html
+++ b/Hannah_Knight_Website.html
@@ -37,7 +37,7 @@
           <img src="website_photo_circle.png" width=100% height=100% alt="Hannah Knight Profile Picture"></td>
         <td>
         <h1 style="font-family: cursive; font-size: 50px; text-align: center">Hannah Knight
-          <div style="font-size: 15px"> <em> Mathematician, harpist, and programmer </em> </div> 
+          <div style="font-size: 15px"> <em> Mathematician and harpist </em> </div> 
         </h1>
         <p>Hi! I am Hannah. I am currently a math PhD student at UC Irvine working on calculating the essential p-dimension of finite simple groups with <a href="https://jpwolfson.com" style="color:hsl(84, 68%, 19%)">Jesse Wolfson</a>.  I am passionate about teaching mathematics, and I really enjoy the process of solving complex puzzles in research.  I also play the harp, and I double majored in math and harp at the University of Arizona. I have recently discovered a passion for software and web development, especially for user interactive programs using Python. I love the outdoors; hiking, biking, rollerblading, and snowboarding are some of my favorite activities. I also enjoy learning languages, playing board games, and swing dancing.</p>
         <table cellspacing="20">
